--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "cobold",
+  "name": "money-splitter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "converter": "node converter.js"
+    "convert": "node src/converter.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/Adlemas/Cobold#readme",
   "dependencies": {
+    "csv": "^6.0.5",
     "node-fs": "^0.1.7",
     "node-xlsx": "^0.21.0"
   }
